lod2demo (1.1.34) lod2; urgency=low

  * add the id's for the UI testing into the application

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Tue, 17 Jul 2012 14:25:39 +0200

lod2demo (1.1.33) lod2; urgency=low

  * make the lod2demo exploit the connection potential of 6.1.5

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Tue, 03 Jul 2012 13:07:00 +0200

lod2demo (1.1.32) lod2; urgency=low

  * protect from infinite loops if virtuso is not installed.

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Tue, 03 Jul 2012 04:04:59 +0200

lod2demo (1.1.31) lod2; urgency=low

  * improved debian installation
  * improved visualisation
  * using the lod2webapi

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Sat, 23 Jun 2012 02:06:38 +0200

lod2demo (1.1.30) lod2; urgency=low

  * fix virtuoso page configuration

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Thu, 24 May 2012 01:42:27 +0200

lod2demo (1.1.29) lod2; urgency=low

  * update package installation procedure

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Thu, 24 May 2012 01:17:09 +0200

lod2demo (1.1.28) lod2; urgency=low

  * add more waits in the postinst

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Tue, 28 Feb 2012 01:46:08 -0800

lod2demo (1.1.27) lod2; urgency=low

  * add pages for limes and spatial semantic browser 

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Tue, 21 Feb 2012 08:10:19 -0800

lod2demo (1.1.26) lod2; urgency=low

  * test the upload in 2 stages

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Mon, 06 Feb 2012 08:06:00 -0800

lod2demo (1.1.25) lod2; urgency=low

  * improve postinst script 

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Mon, 23 Jan 2012 01:14:35 -0800

lod2demo (1.1.24) lod2; urgency=low

  * improve valiant integration