@@ -1,3 +1,13 @@
+lod2demo (1.1.20) lod2; urgency=low
+
+  * lod2 stack 2.0 demonstrator
+  * sparqled integrated
+  * lodrefine integrated
+  * proxy settings integrated
+  * configuration.nt in the system configuration 
+
+ -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Sat, 17 Nov 2012 11:03:30 +0100
+
 lod2demo (1.1.34) lod2; urgency=low
 
   * add the id's for the UI testing into the application
